Update: new td tags with json keys

--- a/index.html
+++ b/index.html
@@ -17,15 +17,8 @@
         </form>
     </div>
     <table>
-        <tr>
-            <th>Name</th>
-            <th>Year</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Country</th>
-        </tr>
     </table>
-    <script src="beautifyJson.js"></script>
+    <script src="script.js"></script>
 </body>
 
 
